Moved specs to more traditional directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 pkg/*
 .rvmrc
 .idea
-test/spec/creds*.json
-test/config.yml
+.bundle
+spec/spec/creds*.json
+spec/config.yml
 traces/
 Gemfile.lock
